--- a/test_mic.ioc
+++ b/test_mic.ioc
@@ -3,7 +3,7 @@ ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_2
 ADC1.ClockPrescaler=ADC_CLOCK_SYNC_PCLK_DIV8
 ADC1.ContinuousConvMode=DISABLE
 ADC1.DMAContinuousRequests=ENABLE
-ADC1.ExternalTrigConv=ADC_EXTERNALTRIGCONV_T3_CC1
+ADC1.ExternalTrigConv=ADC_EXTERNALTRIGCONV_T3_TRGO
 ADC1.IPParameters=Rank-0\#ChannelRegularConversion,master,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,ClockPrescaler,DMAContinuousRequests,ContinuousConvMode,ExternalTrigConv
 ADC1.NbrOfConversionFlag=1
 ADC1.Rank-0\#ChannelRegularConversion=1
@@ -50,9 +50,8 @@ Mcu.Pin15=PA14
 Mcu.Pin16=VP_SYS_VS_Systick
 Mcu.Pin17=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin18=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin19=VP_TIM3_VS_no_output1
+Mcu.Pin19=VP_USB_DEVICE_VS_USB_DEVICE_AUDIO_FS
 Mcu.Pin2=PH1 - OSC_OUT
-Mcu.Pin20=VP_USB_DEVICE_VS_USB_DEVICE_AUDIO_FS
 Mcu.Pin3=PA2
 Mcu.Pin4=PA4
 Mcu.Pin5=PA5
@@ -60,7 +59,7 @@ Mcu.Pin6=PA7
 Mcu.Pin7=PB0
 Mcu.Pin8=PB1
 Mcu.Pin9=PB15
-Mcu.PinsNb=21
+Mcu.PinsNb=20
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F401CCUx
@@ -135,7 +134,7 @@ ProjectManager.DeviceId=STM32F401CCUx
 ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.26.2
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
-ProjectManager.HeapSize=0x200
+ProjectManager.HeapSize=0x400
 ProjectManager.KeepUserCode=true
 ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=0
@@ -193,11 +192,10 @@ TIM2.IPParameters=Prescaler,Period,AutoReloadPreload
 TIM2.Period=9999
 TIM2.Prescaler=83
 TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
-TIM3.Channel-PWM\ Generation1\ No\ Output=TIM_CHANNEL_1
-TIM3.IPParameters=Channel-PWM Generation1 No Output,Prescaler,Period,Pulse-PWM Generation1 No Output,AutoReloadPreload
-TIM3.Period=99
-TIM3.Prescaler=83
-TIM3.Pulse-PWM\ Generation1\ No\ Output=50
+TIM3.IPParameters=Prescaler,Period,AutoReloadPreload,TIM_MasterOutputTrigger
+TIM3.Period=108
+TIM3.Prescaler=0
+TIM3.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 USB_DEVICE.CLASS_NAME_FS=AUDIO
@@ -212,8 +210,6 @@ VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
 VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
-VP_TIM3_VS_no_output1.Mode=PWM Generation1 No Output
-VP_TIM3_VS_no_output1.Signal=TIM3_VS_no_output1
 VP_USB_DEVICE_VS_USB_DEVICE_AUDIO_FS.Mode=AUDIO_FS
 VP_USB_DEVICE_VS_USB_DEVICE_AUDIO_FS.Signal=USB_DEVICE_VS_USB_DEVICE_AUDIO_FS
 board=custom
